--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,7 @@ jobs:
       - checkout
       - setup_remote_docker: 
           docker_layer_caching: true
+          version: 19.03.12
       - run: docker build .
 
 workflows:
